Add Admin panel info

--- a/src/docs/food-apps/overview.mdx
+++ b/src/docs/food-apps/overview.mdx
@@ -1,10 +1,10 @@
 ---
-title: "overview"
+title: "Food ordering system"
 ---
 
 Our POS API supports food ordering experiences, catering to both tableside and takeaway services. You can effortlessly place orders through mobile apps, self-service kiosks, or restaurant-provided tablets.
 
-The **Food Ordering System** enhances the restaurant experience by providing a seamless digital platform for dine-in and takeaway orders. It streamlines the ordering process, reduces wait times, and improves customer satisfaction through self-service options.
+The **Food ordering system** enhances the restaurant experience by providing a seamless digital platform for dine-in and takeaway orders. It streamlines the ordering process, reduces wait times, and improves customer satisfaction through self-service options.
 
 ### Key Features
 
