--- a/src/docs/food-apps/technical-flow.mdx
+++ b/src/docs/food-apps/technical-flow.mdx
@@ -75,7 +75,7 @@ curl -X GET 'http://localhost:80/dishes/{dish_id}?fields=name%7Cdescription%7Cpr
 }
 ```
 
-## 4. Adding Dishes and Viewing the Bill
+## 4. Adding dishes 
 
 The client keeps track of selected dishes and retrieves the total bill before checkout.
 
