--- a/src/docs/food-apps/patron-flow.mdx
+++ b/src/docs/food-apps/patron-flow.mdx
@@ -2,76 +2,18 @@
 title: "Patron flow"
 ---
 
-### Patron API Steps
+### Patron API flow
 
-The page outlines the patron API steps, which involve browsing the menu, placing orders, and managing order fulfillment for table-side and takeaway services.
+The page outlines the patron API flow, which involves browsing the menu, placing orders, and managing order fulfillment for table-side and takeaway services. The flow includes:
 
-## Dashboard Display
+1. Starting with the Dashboard display
+2. Menu browsing and Category navigation
+3. Viewing dish information
+4. Dish selection with customization options
+5. Cart management
+6. Checkout process including review, payment, and confirmation
+7. Two option for delivery based on dining option (Tableside vs. Takeaway)
 
-- Display a welcoming dashboard with options to browse the menu, view promotions, and access account settings.
+The diagram shows a successful patron journey flow through the ordering system:
 
-## 2. Browsing the Menu
-
-### Category Navigation
-
-- Allow patrons to navigate through categories such as Appetizers, Main Courses, and Desserts.
-
-### 2Dish Information
-
-- Display dish details, including name, description, price, images, and dietary information.
-
-## 3. Selecting Dishes
-
-### Add to Cart
-
-- Enable patrons to select dishes and adjust quantity.
-
-### Customization
-
-- Provide options for modifying dishes based on preferences and dietary restrictions.
-
-### Cart Summary
-
-- Show total cost and breakdown before checkout.
-
-## 4. Placing the Order
-
-### Checkout Page
-
-- Provide a final review page before confirming the order.
-
-### Order Review
-
-- Display selected items and their quantities for confirmation.
-
-### Payment and Details
-
-- Allow patrons to select payment methods and provide additional details.
-
-### Order Confirmation
-
-- Provide an order confirmation message with an order number and estimated time.
-
-## 5. Receiving Confirmation
-
-### On-Screen Confirmation
-
-- Show an on-screen confirmation message with order details.
-
-## 6. Order Delivery: Tableside Ordering
-
-###  Order Number Placard
-
-- Generate a placard with the order number for tableside identification.
-
-### Table Delivery
-
-- Notify restaurant staff when the order is ready for delivery to the table.
-
-## 7. Order Delivery: Takeaway Ordering
-
-### Receipt with Order Number
-
-- Provide a receipt with an order number for tracking.
-
-### 7.2.
+![Patron API flow](../../static/images/patron-journey.svg)
