--- a/src/docs/getting-started/account-setup.mdx
+++ b/src/docs/getting-started/account-setup.mdx
@@ -2,7 +2,7 @@
 title: "Account setup"
 ---
 
-The **Account Setup** section provides a comprehensive guide for users to create an account and obtain the necessary API credentials.
+The **Account setup** section provides a comprehensive guide for users to create an account and obtain the necessary API credentials.
 
 To begin using the API, you’ll need to sign up for an account, which involves
 creating a username and password. To create an account:
