--- a/src/docs/getting-started/using-request.mdx
+++ b/src/docs/getting-started/using-request.mdx
@@ -1,5 +1,5 @@
 ---
-title: ""
+title: "Response"
 ---
 
 After sending a request, the API returns a HTTPS status code that indicates the outcome of the request:
