--- a/src/docs/about-rest-api/terminology.mdx
+++ b/src/docs/about-rest-api/terminology.mdx
@@ -2,7 +2,6 @@
 title: "Terminology"
 ---
 
-
 This guide provides definitions for key terms used throughout the POS API documentation.
 
 ## API terminology
@@ -20,7 +19,7 @@ This guide provides definitions for key terms used throughout the POS API docume
 | **Client secret** | A confidential piece of information associated with a client ID, used to authenticate the client with the API provider. It should never be shared publicly. |
 | **REST (Representational State Transfer)** | An architectural style for designing networked applications. It relies on stateless communication and uses standard HTTP methods (GET, POST, PUT, DELETE) to interact with resources, which are represented by URLs. |
 
-## Business Domain Terminology
+## Business domain terminology
 
 | **Term** | **Description** |
 | --- | --- |
