--- a/src/docs/about-rest-api/use-case.mdx
+++ b/src/docs/about-rest-api/use-case.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Use case"
+title: "POS Use case"
 ---
 
 ## Food ordering application
@@ -8,19 +8,15 @@ Enables customers to browse menus, place orders, and complete purchases through 
 
 ### **How it works**
 
-<img src="../../static/images/food-app.svg" alt="Food application flow" style="display: block; margin-left: auto; margin-right: auto;
-  max-width: 750px; width: 100%;"/>
+![Food application flow](../../static/images/food-app.svg)
 
-  ## Kitchen Display System (KDS)
+  ## Kitchen display system (KDS)
 
 Manages and tracks restaurant kitchen orders digitally to improve operational efficiency.
 
 ### How it works
 
-<img src="../../static/images/KDS.svg" alt="Food application flow" style="display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 750px; width: 100%;"/>
+![KDS flow](../../static/images/KDS.svg)
 
 ## Admin panel application
 
@@ -28,7 +24,4 @@ Provides restaurant management tools for administrative tasks and business insig
 
 ### How it works
 
-<img src="../../static/images/admin-panel.svg" alt="Food application flow" style="display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 750px; width: 100%;"/>
+![Admin panel flow](../../static/images/admin-panel.svg)
