--- a/src/docs/about-rest-api/api-overview.mdx
+++ b/src/docs/about-rest-api/api-overview.mdx
@@ -2,7 +2,7 @@
 title: "API introduction"
 ---
 
-The Point of Service (POS) API is a comprehensive ResTech platform that transforms restaurant technology through versatile digital solutions. It was developed by Point of Service Solutions. The Point of Service (POS) API supports three primary application types, each serving distinct roles in the restaurant ecosystem. 
+The Point of Service (POS) api is a comprehensive ResTech platform that transforms restaurant technology through versatile digital solutions. It was developed by Point of Service Solutions. The Point of Service (POS) API supports three primary application types, each serving distinct roles in the restaurant ecosystem. 
 
 - **Food Ordering Applications:** Customer-facing platforms enabling menu browsing, order customization, and purchase completion.
 - **Kitchen Display Systems (KDS)**: Digital systems for kitchen staff to efficiently manage and track order preparation.
