--- a/src/docs/about-rest-api/authentication.mdx
+++ b/src/docs/about-rest-api/authentication.mdx
@@ -42,7 +42,7 @@ Before you can authenticate and request an access token, you must first create a
 }
 ```
 
-### 2. **Obtaining an Access Token**
+### 2. **Obtaining an access token**
 
 Once your account is created, you can authenticate the user and obtain an access token. This is done by sending a `POST/auth/token` endpoint.
 
@@ -72,7 +72,7 @@ Once your account is created, you can authenticate the user and obtain an access
 
 Once you have the access token, include it in the `Authorization` header of every request to access protected resources.
 
-### **Error Handling**
+### **Error handling**
 
 **401 Unauthorized**
 
