--- a/src/docs/about-rest-api/error-handling.mdx
+++ b/src/docs/about-rest-api/error-handling.mdx
@@ -1,12 +1,12 @@
 ---
-Title: "Error handling"
+title: "Error handling"
 ---
 
 Our API returns standard HTTP success or error status codes. In case of errors, responses include additional information in JSON format.
 
 The following table lists the error status codes.
 
-| Error Code | Description |
+| Error code | Description |
 | --- | --- |
 | 200 | Successful operation. |
 | 201 | Resource created successfully. |
