--- a/src/docs/admin-panel/admin-tech.mdx
+++ b/src/docs/admin-panel/admin-tech.mdx
@@ -37,7 +37,7 @@ On successful authentication, the server returns an **access token** with an exp
 
 Admins can add and manage ingredients to ensure accurate stock levels and availability for dishes.
 
-### Create an Ingredient
+### Create an ingredient
 
 To add a new ingredient, send a `POST /ingredients` request with the ingredient details:
 
@@ -65,7 +65,7 @@ A successful response returns the created ingredient:
 
 Admins can create new dishes by specifying their name, category, ingredients, and preparation details.
 
-### Create a Dish
+### Create a dish
 
 To add a new dish, send a `POST /dishes` request with the dish details:
 
@@ -102,7 +102,7 @@ A successful response returns the created dish:
 
 Admins can monitor and manage orders placed by customers.
 
-### Retrieve Orders
+### Retrieve orders
 
 To fetch a list of all orders, send a `GET /orders` request.
 
